--- a/1/admin/login.html
+++ b/1/admin/login.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css" rel="stylesheet">
-    <link rel="stylesheet" href="template/css/animate.css">
+    <link rel="stylesheet" href="/admin/template/css/animate.css">
+
     <style>
 
 @import url(https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
